[project]
name = "tdfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "werkzeug>=3.1.6",
]
